--- a/index.html
+++ b/index.html
@@ -1,16 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sign-Up Form | The Odin Project</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign-Up Form | The Odin Project</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <p>hello</p>
-</body>
-
+  <body>
+    <div class="sign-up">
+      <div class="left-section">
+        <h1 class="logo">
+          <img
+            class="img-logo"
+            src="assets/odin-lined.png"
+            alt="odin logo"
+          /><span>ODIN</span>
+        </h1>
+        <p class="credit">
+          Photo by
+          <a href="https://unsplash.com/@dynamicwang" target="_blank"
+            >Dynamic Wang</a
+          >
+          on
+          <a
+            href="https://unsplash.com/photos/wavy-body-of-water-closeup-photography-z9hwMHnA788"
+            target="_blank"
+            >Unsplash</a
+          >
+        </p>
+      </div>
+      <div class="form-section">
+        <p class="lead">
+          This is not a real online service! You know you need something like
+          this in your life to help you realize your deepest dreams.
+        </p>
+        <p class="lead">Sign up now to get started</p>
+        <p class="lead">You <em>know</em> you want to.</p>
+        <form action="#">
+          <div class="form-inputs">
+            <h3>Let's do this!</h3>
+            <div class="form-group">
+              <div>
+                <label for="first-name">First Name</label>
+                <input type="text" name="first-name" id="first-name" />
+              </div>
+              <div>
+                <label for="last-name">Last Name</label>
+                <input type="text" name="last-name" id="last-name" />
+              </div>
+            </div>
+            <div class="form-group">
+              <div>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" />
+              </div>
+              <div>
+                <label for="phone-numebr">Phone Number</label>
+                <input type="tel" name="phone-number" id="phone-number" />
+              </div>
+            </div>
+            <div class="form-group">
+              <div>
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" />
+              </div>
+              <div>
+                <label for="confirm_password">Confirm Password</label>
+                <input
+                  type="password"
+                  name="confirm-password"
+                  id="confirm-password"
+                />
+              </div>
+            </div>
+          </div>
+          <button type="submit">Create Account</button>
+        </form>
+        <p class="login">
+          Already have an account? <a class="login-link" href="#">Log in</a>
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
