--- a/index.html
+++ b/index.html
@@ -44,27 +44,60 @@
             <div class="form-group">
               <div>
                 <label for="first-name">First Name</label>
-                <input type="text" name="first-name" id="first-name" />
+                <input
+                  type="text"
+                  name="first-name"
+                  id="first-name"
+                  maxlength="20"
+                  placeholder=" "
+                  required
+                />
               </div>
               <div>
                 <label for="last-name">Last Name</label>
-                <input type="text" name="last-name" id="last-name" />
+                <input
+                  type="text"
+                  name="last-name"
+                  id="last-name"
+                  placeholder=" "
+                  maxlength="20"
+                />
               </div>
             </div>
             <div class="form-group">
               <div>
                 <label for="email">Email</label>
-                <input type="email" name="email" id="email" />
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder=" "
+                  pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+                  required
+                />
               </div>
               <div>
                 <label for="phone-numebr">Phone Number</label>
-                <input type="tel" name="phone-number" id="phone-number" />
+                <input
+                  type="tel"
+                  name="phone-number"
+                  id="phone-number"
+                  placeholder=" "
+                  pattern="[0-9]{10}"
+                />
               </div>
             </div>
             <div class="form-group">
               <div>
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" />
+                <input
+                  type="password"
+                  name="password"
+                  id="password"
+                  pattern="^(?=.*[A-Z])(?=.*\d).{8,}$"
+                  placeholder=" "
+                  required
+                />
               </div>
               <div>
                 <label for="confirm_password">Confirm Password</label>
@@ -72,6 +105,9 @@
                   type="password"
                   name="confirm-password"
                   id="confirm-password"
+                  pattern="^(?=.*[A-Z])(?=.*\d).{8,}$"
+                  placeholder=" "
+                  required
                 />
               </div>
             </div>
