Add password validation logic

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sign-Up Form | The Odin Project</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script defer src="./script.js"></script>
   </head>
 
   <body>
@@ -98,6 +99,7 @@
                   placeholder=" "
                   required
                 />
+                <p class="password-match hidden">*Passwords do not match</p>
               </div>
               <div>
                 <label for="confirm_password">Confirm Password</label>
